# tix-q

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bun.lockb  docker-compose.yml  gunicorn.conf.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish_website.yml
frontend/: package.json  tailwind.config.cjs
frontend/src/: constants.ts  db.ts
frontend/src/components/: AppContext.tsx  Auth.tsx  AuthButton.tsx  CreateRoomCard.tsx  DashboardRoomList.tsx  FirebaseContext.tsx  Header.astro  Header.tsx  InteractiveTest.tsx  MarkdownCard.tsx  RegisterButton.tsx  TrpcContext.tsx  TurnstileWrapper.tsx  WaitingRoom.tsx  WaitingRoomCard.tsx  WaitingRoomContent.tsx  WaitingRoomEditor.tsx  WaitingRoomForm.tsx
frontend/src/fakeServer/: router.ts  trpc.ts
frontend/src/pages/: auth.astro  index.astro
frontend/src/pages/dashboard/: [id].astro  index.astro
frontend/src/pages/room/: [id].astro
frontend/src/types/: RegisterProcedure.ts  roomsProcedures.ts
frontend/src/utils/: firebase.ts  trpc.ts
prisma/: schema.prisma
prisma/migrations/20230602223049_initial/: migration.sql
prisma/migrations/20230604111305_add_publication_flag/: migration.sql
prisma/migrations/20230604193650_add_json_content/: migration.sql
prisma/migrations/20230604193707_remove_default_json_value/: migration.sql
prisma/migrations/20230604194351_drop_json_content/: migration.sql
prisma/migrations/20230604194429_add_content_bytes/: migration.sql
prisma/migrations/20230612140249_cleanup_before_deployment/: migration.sql
prisma/migrations/20230616081716_add_user_email/: migration.sql
prisma/migrations/20230822182421_image_blobs/: migration.sql
prisma/migrations/20241011102331_bespoke_burnerot_feature/: migration.sql
prisma/migrations/20241015132105_add_event_choice/: migration.sql
prisma/migrations/20241027124528_turnstile_fail_reason/: migration.sql
prisma/migrations/20241028162034_index_registrants/: migration.sql
prisma/migrations/20241028162739_index_firebase_uid/: migration.sql
scripts/: check_db_connection.py  migrate.sh
server/: README.md  config.py  constants.py  firebase.py  gunicorn.conf.py  logger.py  main.py  models.py  pyproject.toml  requirements.txt  string_manipulation.py  trpc.py  turnstile.py  types.py
server/db/: session.py  user.py  waiting_room.py
server/middleware/: firebase.py  turnstile.py  user.py
server/routes/: markdown.py  markdown_edit.py  markdown_read.py  register.py  room.py
server/scripts/: prisma-generate.sh
website/: .eslintrc.cjs  biome.json  bun.lockb  constants.ts  package.json  tailwind.config.js  vite.config.ts
website/components/: AuthButton.tsx  ClientOnly.tsx  Countdown.tsx  CreateRoomCard.tsx  DashboardRoomList.tsx  Footer.tsx  Header.tsx  MarkdownCard.tsx  Spinner.tsx  TrpcContext.tsx  TurnstileContext.tsx  TurnstileWrapper.tsx  WaitingRoomCard.tsx  WaitingRoomDashboardCard.tsx  WaitingRoomEditor.tsx  WaitingRoomForm.tsx  WaitingRoomPage.tsx
website/fakeServer/: router.ts  trpc.ts
website/pages/: auth.page.client.tsx  auth.page.tsx
website/pages/dashboard/: index.page.client.tsx
website/pages/dashboard/@id/: index.page.client.tsx
website/pages/dashboard/editor/@id/: index.page.client.tsx
website/pages/dashboard/live/@id/: index.page.client.tsx
website/pages/index/: index.page.server.ts  index.page.tsx
website/pages/room/@id/: index.page.server.tsx  index.page.tsx
website/renderer/: Link.tsx  PageShell.css  PageShell.tsx  _default.page.client.tsx  _default.page.server.tsx  types.ts  usePageContext.tsx
website/server/: index.ts
website/types/: MarkdownEditProcedure.ts  MarkdownReadProcedure.ts  RegisterProcedure.ts  eventChoicesSchema.ts  roomsProcedures.ts
website/utils/: firebase.ts  queries.ts
