[tool.poetry]
name = "tix-q"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tix_q"}]

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.8.2"
pydantic = {extras = ["email"], version = "^1.10.8"}
requests = "^2.31.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
