[tool.poetry]
name = "tix-q"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.8.2"
pydantic = {extras = ["email"], version = "^1.10.8"}
requests = "^2.31.0"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
httpx = "^0.24.1"
cachetools = "^5.3.0"
asyncache = "^0.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
black = "^23.3.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
