[tool.poetry]
name = "tix-q"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.9.0"
pydantic = {extras = ["email"], version = "^1.10.8"}
requests = "^2.31.0"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"
httpx = "^0.24.1"
cachetools = "^5.3.0"
asyncache = "^0.3.1"
firebase-admin = "^6.1.0"
asyncer = {git = "https://github.com/tiangolo/asyncer.git", rev = "bf0ae5c4f7977863e5de9d8cd45b8965d925e3b1"}
orjson = "^3.9.1"
timing-asgi = "^0.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
sqlalchemy-cockroachdb = "^2.0.1"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
black = "^23.3.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
