[tool.poetry]
name = "tix-q"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^2.9.2"}
requests = "^2.31.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
httpx = "^0.24.1"
cachetools = "^5.3.0"
asyncache = "^0.3.1"
firebase-admin = "^6.1.0"
orjson = "^3.9.1"
timing-asgi = "^0.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
sqlalchemy-cockroachdb = "^2.0.1"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
asyncer = "^0.0.8"
sentry-sdk = {extras = ["fastapi"], version = "^2.16.0"}
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
black = "^23.3.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
